--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -79,5 +79,37 @@
             <img src="./asset/7.jpg" alt="">
         </div>
     </div>
+
+    <div class="container-empat">
+        <div class="card">
+            <div class="header"></div>
+            <div class="content">
+                <p>ipsum dolor sit amet consectetur adipisicing elit. Autem, dicta!</p>
+               <button>Check It Out !</button>
+            </div>
+        </div>
+
+        <div class="card besar">
+            <div class="header"></div>
+            <div class="content">
+                <p>ipsum dolor sit amet consectetur adipisicing elit. Autem, dicta!</p>
+               <button>Check It Out !</button>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="header"></div>
+            <div class="content">
+                <p>ipsum dolor sit amet consectetur adipisicing elit. Autem, dicta!</p>
+                <button>Check It Out !</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lima">
+        <div class="kotak">
+            <span>Hello Wahyu ! Yes World I'm Coming</span>
+        </div>
+    </div>
 </body>
 </html>
